--- a/index.html
+++ b/index.html
@@ -4,8 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dan Whitlock</title>
+    <!-- Favicon -->
+    <link rel="icon" sizes="32x32" href="./assets/images/favicon-32x32.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+    <!-- CSS -->
+    <link rel="stylesheet" href="./assets/css/styles.css">
+
 </head>
 <body>
     
+    <!-- JavaScript -->
+    <script src="./assets/js/script.js"></script>
+
+    <!-- Icons -->
+    <script type="module" src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.esm.js"></script>
+    <script nomodule src="https://unpkg.com/ionicons@7.1.0/dist/ionicons/ionicons.js"></script>
 </body>
 </html>
