Create & style navbar

--- a/index.html
+++ b/index.html
@@ -13,6 +13,18 @@
 </head>
 <body>
     
+    <!-- Navigation -->
+    <nav>
+        <h1>Dan Whitlock</h1>
+        <ul class="navbar">
+            <li><a href="#about" class="navbar-link">About</a></li>
+            <li><a href="#skills" class="navbar-link">Skills</a></li>
+            <li><a href="#projects" class="navbar-link">Projects</a></li>
+            <li><a href="#contact" class="navbar-link">Contact</a></li>
+        </ul>
+        <ion-icon name="reorder-four-outline" class="menu-button"></ion-icon>
+    </nav>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
