Create & style intro section

--- a/index.html
+++ b/index.html
@@ -25,6 +25,17 @@
         <ion-icon name="reorder-four-outline" class="menu-button"></ion-icon>
     </nav>
 
+    <!-- Main -->
+
+    <main>
+        <img src="./assets/images/dan.png" alt="A cartoon picture of Dan">
+        <div class="intro">
+            <h2>My name is Dan.</h2>
+            <p>I'm a Front-End Developer, Agile Project Manager and an amateur Artist.</p>
+            <p>I spend my time learning new coding skills and looking for ways to fulfill my creative aspirations.</p>
+        </div>
+    </main>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
