Create & style about me section

--- a/index.html
+++ b/index.html
@@ -36,6 +36,15 @@
         </div>
     </main>
 
+    <!-- About Me -->
+
+    <section class="about-me">
+        <h2>About Me</h2>
+        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora rem, cupiditate sapiente maiores voluptas non quae fuga, magnam aliquid modi est nostrum eius beatae totam! Recusandae facilis quae et mollitia.</p>
+        <br>
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto explicabo sed, repudiandae iure quasi corporis magni nobis eaque. Aperiam sit veritatis, impedit nemo ex mollitia eum neque cumque quos.</p>
+    </section>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
