Create & style skills section

--- a/index.html
+++ b/index.html
@@ -45,6 +45,47 @@
         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto explicabo sed, repudiandae iure quasi corporis magni nobis eaque. Aperiam sit veritatis, impedit nemo ex mollitia eum neque cumque quos.</p>
     </section>
 
+    <!-- Skills -->
+    <section class="skills">
+        <h2>My Skills</h2>
+        <div class="skills-container">
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-html.svg" alt="A logo for HTML" class="skill-icon">
+                <p class="skill-desc">HTML</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-css.svg" alt="A logo for CSS" class="skill-icon">
+                <p class="skill-desc">CSS</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-bootstrap.svg" alt="A logo for Bootstrap" class="skill-icon">
+                <p class="skill-desc">Bootstrap</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-javascript.svg" alt="A logo for JavaScript" class="skill-icon">
+                <p class="skill-desc">JavaScript</p>
+            </div>
+        </div>
+        <div class="skills-container">
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-jquery.svg" alt="A logo for jQuery" class="skill-icon">
+                <p class="skill-desc">jQuery</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-react-js.svg" alt="A logo for React JS" class="skill-icon">
+                <p class="skill-desc">React</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-node-js.svg" alt="A logo for Node JS" class="skill-icon">
+                <p class="skill-desc">Node</p>
+            </div>
+            <div class="skill-card">
+                <img src="./assets/icons/icons8-scrum-64.png" alt="A logo for Scrum" class="skill-icon">
+                <p class="skill-desc">Scrum</p>
+            </div>
+        </div>
+    </section>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
