--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
     <!-- Favicon -->
     <link rel="icon" sizes="32x32" href="./assets/images/favicon-32x32.png">
     <link rel="apple-touch-icon" sizes="180x180" href="./assets/images/apple-touch-icon.png">
+    <!-- Fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
     <!-- CSS -->
     <link rel="stylesheet" href="./assets/css/styles.css">
 
