Add Projects Section

--- a/index.html
+++ b/index.html
@@ -90,6 +90,37 @@
         </div>
     </section>
 
+
+    <!-- Projects -->
+
+    <section class="projects" id="projects">
+        <h2 class="projects-header">Recent Projects</h2>
+        <div class="projects-container">
+
+            <div class="project-container project-card">
+                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
+                <h3 class="project-title">Project One Title</h3>
+                <p class="project-info">Project One Information</p>
+                <a class="project-link" href="#" target="_blank">Link to Project One</a>
+            </div>
+
+            <div class="project-container project-card">
+                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
+                <h3 class="project-title">Project Two Title</h3>
+                <p class="project-info">Project Two Information</p>
+                <a class="project-link" href="#" target="_blank">Link to Project Two</a>
+            </div>
+
+            <div class="project-container project-card">
+                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
+                <h3 class="project-title">Project Three Title</h3>
+                <p class="project-info">Project Three Information</p>
+                <a class="project-link" href="#" target="_blank">Link to Project Three</a>
+            </div>
+
+        </div>
+    </section>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
