Add Profile Links

--- a/index.html
+++ b/index.html
@@ -148,7 +148,16 @@
         </div>
     </section>
 
-    
+    <!-- Profile Links -->
+
+    <div class="profile-links">
+        <a href="#" target="_blank">
+            <img src="./assets/icons/icons8-linkedin.svg" alt="LinkedIn" class="profile-icon">
+        </a>
+        <a href="#" target="_blank">
+            <img src="./assets/icons/icons8-github.svg" alt="Github" class="profile-icon">
+        </a>
+    </div>
 
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
