--- a/index.html
+++ b/index.html
@@ -159,6 +159,18 @@
         </a>
     </div>
 
+    <!-- Scroll to Top -->
+
+    <i class="scroll-to-top">
+        <img src="./assets/icons/icons8-up-100.png" alt="Scroll to Top" class="scroll-icon">
+    </i>
+
+    <!-- Footer -->
+
+    <footer>
+        <p>&copy; Copyright Dan Whitlock 2023</p>
+    </footer>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
