Update section links

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 
     <!-- About Me -->
 
-    <section class="about-me">
+    <section class="about-me" id="about">
         <h2>About Me</h2>
         <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora rem, cupiditate sapiente maiores voluptas non quae fuga, magnam aliquid modi est nostrum eius beatae totam! Recusandae facilis quae et mollitia.</p>
         <br>
@@ -50,7 +50,7 @@
     </section>
 
     <!-- Skills -->
-    <section class="skills">
+    <section class="skills" id="skills">
         <h2>My Skills</h2>
         <div class="skills-container">
             <div class="skill-card">
@@ -121,7 +121,7 @@
         </div>
     </section>
 
-    <section class="contact">
+    <section class="contact" id="contact">
         <h2>Contact Me</h2>
         <div class="contact-container">
             <div class="contact-form">
