Add Media Queries

--- a/index.html
+++ b/index.html
@@ -171,6 +171,19 @@
         <p>&copy; Copyright Dan Whitlock 2023</p>
     </footer>
 
+    <div class="icons-small-screens">
+        <div class="profile-links-small">
+            <a href="#" target="_blank">
+                <img src="./assets/icons/icons8-linkedin.svg" alt="LinkedIn" class="profile-icon">
+            </a>
+            <a href="#" target="_blank">
+                <img src="./assets/icons/icons8-github.svg" alt="Github" class="profile-icon">
+            </a>
+        <i class="scroll-to-top-small">
+            <img src="./assets/icons/icons8-up-100.png" alt="Scroll to Top" class="scroll-icon">
+        </i>
+    </div>
+
     <!-- JavaScript -->
     <script src="./assets/js/script.js"></script>
 
