Update page content & links

--- a/index.html
+++ b/index.html
@@ -44,9 +44,9 @@
 
     <section class="about-me" id="about">
         <h2>About Me</h2>
-        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempora rem, cupiditate sapiente maiores voluptas non quae fuga, magnam aliquid modi est nostrum eius beatae totam! Recusandae facilis quae et mollitia.</p>
+        <p>I'm a Front-End Developer with a background in Art & Design, passionate about web design and functionality.  I'm also a qualified Scrum Master & Project Manager with over a decade of experience delivering complex change programmes for clients in regulated environments.</p>
         <br>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Aperiam architecto explicabo sed, repudiandae iure quasi corporis magni nobis eaque. Aperiam sit veritatis, impedit nemo ex mollitia eum neque cumque quos.</p>
+        <p>I'm a driven learner - I believe strongly in continuous self-improvement and spend most of my free time developing my own skills and branching out into new areas.</p>
     </section>
 
     <!-- Skills -->
@@ -98,24 +98,28 @@
         <div class="projects-container">
 
             <div class="project-container project-card">
-                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
-                <h3 class="project-title">Project One Title</h3>
-                <p class="project-info">Project One Information</p>
-                <a class="project-link" href="#" target="_blank">Link to Project One</a>
+                <img class="project-image" src="./assets/images/ProjectOne.png" alt="project screenshot">
+                <h3 class="project-title">Weather Dashboard</h3>
+                <p class="project-info">A Weather app which uses third-party APIs to dynamically provide (and save) forecasts for chosen areas.</p>
+                <a class="project-link" href="https://danwhitlock.github.io/weather-dashboard/" target="_blank">Live Version</a>
+                <br>
+                <a class="project-link" href="https://github.com/danwhitlock/weather-dashboard" target="_blank">Repo</a>
             </div>
 
             <div class="project-container project-card">
-                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
-                <h3 class="project-title">Project Two Title</h3>
-                <p class="project-info">Project Two Information</p>
-                <a class="project-link" href="#" target="_blank">Link to Project Two</a>
+                <img class="project-image" src="./assets/images/ProjectTwo.png" alt="project screenshot">
+                <h3 class="project-title">Rock, Paper, Scissors</h3>
+                <p class="project-info">A game of rock, paper, scissors played in the browser against the 'computer'. The first to five points wins!</p>
+                <a class="project-link" href="https://danwhitlock.github.io/rock_paper_scissors/" target="_blank">Live Version</a>
+                <br>
+                <a class="project-link" href="https://github.com/danwhitlock/rock_paper_scissors" target="_blank">Repo</a>
             </div>
 
             <div class="project-container project-card">
-                <img class="project-image" src="./assets/images/Screenshot.png" alt="project screenshot">
-                <h3 class="project-title">Project Three Title</h3>
-                <p class="project-info">Project Three Information</p>
-                <a class="project-link" href="#" target="_blank">Link to Project Three</a>
+                <img class="project-image" src="./assets/images/ProjectThree.png" alt="project screenshot">
+                <h3 class="project-title">README File Generator</h3>
+                <p class="project-info">A node app which will automatically create a professional README file from information prompts and terminal input from a user. </p>
+                <a class="project-link" href="https://github.com/danwhitlock/readme-generator" target="_blank">Repo</a>
             </div>
 
         </div>
@@ -151,10 +155,10 @@
     <!-- Profile Links -->
 
     <div class="profile-links">
-        <a href="#" target="_blank">
+        <a href="https://www.linkedin.com/in/dan-whitlock/" target="_blank">
             <img src="./assets/icons/icons8-linkedin.svg" alt="LinkedIn" class="profile-icon">
         </a>
-        <a href="#" target="_blank">
+        <a href="https://github.com/danwhitlock" target="_blank">
             <img src="./assets/icons/icons8-github.svg" alt="Github" class="profile-icon">
         </a>
     </div>
@@ -173,10 +177,10 @@
 
     <div class="icons-small-screens">
         <div class="profile-links-small">
-            <a href="#" target="_blank">
+            <a href="https://www.linkedin.com/in/dan-whitlock/" target="_blank">
                 <img src="./assets/icons/icons8-linkedin.svg" alt="LinkedIn" class="profile-icon">
             </a>
-            <a href="#" target="_blank">
+            <a href="https://github.com/danwhitlock" target="_blank">
                 <img src="./assets/icons/icons8-github.svg" alt="Github" class="profile-icon">
             </a>
         <i class="scroll-to-top-small">
